fixed welcome sections top padding on mobile devices

--- a/src/home.scss
+++ b/src/home.scss
@@ -84,6 +84,7 @@
     }
     #welcome_section {
         height: auto;
+        padding-top: 12rem;
     }
     nav {
         div > * {
